--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_topiclist.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_topiclist.scss
@@ -64,13 +64,15 @@
 						@include inline-block(baseline);
 						margin: 0 0 5px 0;
 					}
-					a .icon.fa-exclamation {
-						background: mix(white, $color-11, 75%);
-						@include sizing(18px, 18px);
-						line-height: 18px;
-						border-radius: 100%;
-						text-align: center;
-						margin: 0 0 0 5px;
+					a .icon {
+						&.fa-exclamation, &.fa-question {
+							background: $color-09;
+							@include sizing(18px, 18px);
+							line-height: 18px;
+							border-radius: 100%;
+							text-align: center;
+							margin: 0 0 0 5px;							
+						}
 					}
 				}					
 			}
