--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -41,20 +41,16 @@
 	}
 	dt {
 		text-align: center;
-		&, &.has-avatar .avatar-container {
-			margin: 0 0 10px 0;
-		}
-		&.has-avatar {			
-			.avatar-container {
-				display: inline-block;
-				overflow: hidden;
-				border: 5px solid $color-04;
-				border-radius: 100%;
-				a.avatar {
-					display: block;
-					@include sizing(100%, 0);
-					padding: 0 0 100% 0;
-				}
+		margin: 0 0 10px 0;
+		&.has-avatar .avatar-container {
+			display: inline-block;
+			overflow: hidden;
+			border: 5px solid $color-04;
+			border-radius: 100%;
+			a.avatar {
+				display: block;
+				@include sizing(100%, 0);
+				padding: 0 0 100% 0;
 			}
 		}
 		.username-coloured {
@@ -79,6 +75,10 @@
 			}
 		}		
 	}
+}
+
+.post.online .postprofile dt.no-avatar {
+	margin-top: 30px;
 }
 
 /* View Topic - Body
@@ -109,13 +109,21 @@
 		font-size: rem(13px);
 	}
 	.post-notice {
-		background: mix(white, $color-11, 75%);
-		padding: 5px;
+		background: $color-09;
+		padding: 10px;
 		border-radius: 3px;
-		a {
-			color: $color-08;
-			&:hover {
+		&, a {
+			color: $color-08
+		}
+		a:hover {
+			color: $color-07;
+		}
+		&.unapproved {
+			.icon-red {
 				color: $color-07;
+			}
+			.button2 {
+				margin: 0 5px;
 			}
 		}
 	}
@@ -214,6 +222,10 @@
 /* View Topic - Poll Vote
 ========================================================================== */
 
+.topic_poll .panel {
+	min-height: 0 !important;
+}
+
 .topic_poll .content {
 	.author {
 		&:after {
@@ -228,9 +240,6 @@
 	}
 	.polls dl {
 		margin-bottom: 20px;
-		&:last-child {
-			margin-bottom: 0;
-		}
 		&.voted {
 			font-weight: bold;		
 		}
@@ -265,6 +274,9 @@
 			.pollbar1 {
 				background: mix(black, $color-10, 30%);
 			}																				
+		}
+		.button1 {
+			margin: 0;
 		}
 	}
 	.vote-submitted {
