Background color change for reported / unapproved

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_topiclist.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_topiclist.scss
@@ -73,6 +73,12 @@
 							text-align: center;
 							margin: 0 0 0 5px;							
 						}
+						&.fa-exclamation {
+							background: mix(white, $color-11, 80%);
+						}
+						&.fa-question {
+							background: mix(white, $color-07, 80%);
+						}
 					}
 				}					
 			}
