Style updates for topic posted and previews

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -166,7 +166,7 @@
 /* Main Boxes (Inner)
 ========================================================================== */
 
-#page-welcome, #featured-content, .forabg, .forumbg, .panel {
+#page-welcome, #featured-content, .forabg, .forumbg, .post, .panel {
 	.inner {
 		padding: 20px 20px 0 20px;
 		background: rgba($color-02, 0.20);
@@ -175,7 +175,7 @@
 	}
 }
 
-#page-welcome, #featured-content, .forabg, .panel {
+#page-welcome, #featured-content, .forabg, .post, .panel {
 	.inner {
 		margin: 0 0 40px 0;
 	}
