--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_prosilver.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_prosilver.scss
@@ -886,19 +886,19 @@ fieldset.forum-selection2 {
 ----------------------------------------*/
 
 /* Main message box */
-.message-box {
-	width: 80%;
-}
+// .message-box {
+// 	width: 80%;
+// }
 
 /* Emoticons panel */
-.smiley-box {
-	width: 18%;
-	float: right;
-}
+// .smiley-box {
+// 	width: 18%;
+// 	float: right;
+// }
 
-.smiley-box img {
-	margin: 3px;
-}
+// .smiley-box img {
+// 	margin: 3px;
+// }
 
 /* Input field styles
 ---------------------------------------- */
@@ -1102,14 +1102,14 @@ input.disabled {
 		padding-left: 20px;
 	}
 
-	.smiley-box, .message-box {
-		float: none;
-		width: auto;
-	}
+	// .smiley-box, .message-box {
+	// 	float: none;
+	// 	width: auto;
+	// }
 
-	.smiley-box {
-		margin-top: 5px;
-	}
+	// .smiley-box {
+	// 	margin-top: 5px;
+	// }
 
 	.bbcode-status {
 		display: none;
