--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
@@ -24,6 +24,7 @@
 @import 'layout';
 @import 'topiclist';
 @import 'viewtopic';
+@import 'posting';
 @import 'header';
 @import 'footer';
 // @import 'responsive';
