Fix inner styles

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -93,9 +93,8 @@ input[type='checkbox'], input[type='radio']  {
 }
 
 fieldset.submit-buttons {
-	.button, .button1, .button2 {
-		margin: 0 0 20px 0;
-	}		
+	text-align: center;
+	margin: 0 0 20px 0;		
 }
 
 /* Fieldset - DL
