--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_posting.scss
@@ -67,14 +67,14 @@
 ========================================================================== */
 
 .section-posting #postingbox {
-	.inner {
-		border-bottom: none;
-		box-shadow: 3px 0 6px rgba($color-02, 0.30);		
-	}
-	& + .panel {
-		margin: -60px 0 0 0;
-		.inner {
-			border-top: none;
-		}
-	}
+	// .inner {
+	// 	border-bottom: none;
+	// 	box-shadow: 3px 0 6px rgba($color-02, 0.30);		
+	// }
+	// & + .panel {
+	// 	margin: -60px 0 0 0;
+	// 	.inner {
+	// 		border-top: none;
+	// 	}
+	// }
 }
