--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -166,45 +166,25 @@
 /* Main Boxes (Inner)
 ========================================================================== */
 
-.forabg, .forumbg {
+.forabg, .forumbg, .panel, .topic-wrapper, .section-posting #preview, .section-posting #preview + .post, 
+.section-posting #topicreview {
 	padding: 20px 20px 0 20px;
 	background: rgba($color-02, 0.20);
 	border: 1px solid $color-04;
 	box-shadow: 3px 3px 6px rgba($color-02, 0.30);
 } 
 
-.forabg {
+.forabg, .panel, .section-posting #preview, .section-posting #topicreview {
 	margin: 0 0 40px 0;
 }
 
-.forumbg {
-	margin: 0 0 10px 0;
+.section-posting #preview + .post {
+	margin: -30px 0 40px 0;
 }
 
-// #page-welcome, #featured-content, .forabg, .forumbg, .post, .panel {
-// 	.inner {
-// 		padding: 20px 20px 0 20px;
-// 		background: rgba($color-02, 0.20);
-// 		border: 1px solid $color-04;
-// 		box-shadow: 3px 3px 6px rgba($color-02, 0.30);
-// 	}
-// }
-
-// #page-welcome, #featured-content, .forabg, .post, .panel {
-// 	.inner {
-// 		margin: 0 0 40px 0;
-// 	}
-// }
-
-
-
-// .inner .inner {
-// 	padding: 0;
-// 	background: none;
-// 	border: 0;
-// 	box-shadow: none;
-// 	margin: 0;
-// }
+.forumbg, .topic-wrapper {
+	margin: 0 0 10px 0;
+}
 
 /* Pagination
 ========================================================================== */
@@ -395,12 +375,12 @@
 ========================================================================== */
 
 .stat-block {
-	margin: 0 0 30px 0;
+	margin: 0 0 40px 0;
 	h3 {
 		margin: 0 0 10px 0;
 	}
 	&.online-list {
-		margin: 40px 0 30px 0;
+		margin-top: 40px;
 	}
 }
 
