--- a/khyeras/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/styles/khyeras_v1/template/overall_header.html
@@ -132,7 +132,7 @@
 
 		<section id="page-welcome" class="page-welcome">
 			<div class="wrapper">
-				<div class="inner">
+				<div class="panel">
 					<div class="flex-row flex-row-20">
 						<div class="introduction flex-column">
 							<p>All at once, the Eidolon's restoration of Khy'eras was obliterated when Bhelest unlocked ancient, concealed magic. With newfound talents, the mage exiled the Eidolons and amassed legions of the undead. Two hundred years of terror transpired until Cecilia of Fellsgard gathered followers to bring forth Bhelest's downfall. Free from nightmares, the expansive realm flourished and explorers journeyed from cities. People referred to Khy'eras as "The Neverend", unsure of its boundaries. Some claimed that those who departed found only death, but others discovered something else entirely - hope and adventures.</p>
@@ -262,7 +262,7 @@
 		
 		<section id="featured-content" class="featured-content">
 			<div class="wrapper">
-				<div class="inner">
+				<div class="panel">
 					<div class="flex-row flex-row-10">
 						<div class="flex-column featured-title"><h5>Featured</h5></div>				
 						<div class="flex-column featured-mvp">
