--- a/khyeras/styles/khyeras_v1/template/viewtopic_body.html
+++ b/khyeras/styles/khyeras_v1/template/viewtopic_body.html
@@ -129,7 +129,7 @@
 
 <!-- EVENT viewtopic_body_poll_after -->
 
-<div class="panel viewtopic">
+<div class="topic-wrapper">
 	<div class="inner">
 
 		<!-- BEGIN postrow -->
@@ -381,10 +381,6 @@
 	</div>
 </div>
 
-<!-- IF S_QUICK_REPLY -->
-	<!-- INCLUDE quickreply_editor.html -->
-<!-- ENDIF -->
-
 <!-- EVENT viewtopic_body_topic_actions_before -->
 	<div class="action-bar bar-bottom">
 	<!-- EVENT viewtopic_buttons_bottom_before -->
@@ -440,8 +436,13 @@
 	<!-- ENDIF -->
 </div>
 
-<!-- EVENT viewtopic_body_footer_before -->
 <!-- INCLUDE jumpbox.html -->
+
+<!-- IF S_QUICK_REPLY -->
+	<!-- INCLUDE quickreply_editor.html -->
+<!-- ENDIF -->
+
+<!-- EVENT viewtopic_body_footer_before -->
 
 <!-- IF S_DISPLAY_ONLINE_LIST and U_VIEWONLINE -->
 	<div class="stat-block online-list">
