Add class for 'no topics' forum, remove javascript, rename sass topiclist file

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -174,7 +174,8 @@
 	box-shadow: 3px 3px 6px rgba($color-02, 0.30);
 } 
 
-.forabg, .panel, .section-posting #preview, .section-posting #topicreview, .section-posting #preview + .post {
+.forabg, .panel, .section-posting #preview, .section-posting #preview + .post, 
+.section-posting #topicreview {
 	margin: 0 0 $main-margin 0;
 }
 
