--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewforum.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewforum.scss
@@ -114,6 +114,14 @@
 	}
 }
 
+/* Forums - No Topics
+========================================================================== */
+
+.panel.no-topics .inner strong {
+	display: block;
+	margin: 0 0 20px 0;
+}
+
 /* Topics
 ========================================================================== */
 
