--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -183,6 +183,14 @@
 	margin: 0 0 10px 0;
 }
 
+.panel .panel {
+	padding: 0;
+	margin: 0;
+	background: none;
+	border: 0;
+	box-shadow: none;
+}
+
 /* Pagination
 ========================================================================== */
 
@@ -431,4 +439,34 @@
 	&:after {
 		top: 39px;
 	}	
+}
+
+/* Tabs
+========================================================================== */
+
+.tabs {
+	& > ul {
+		list-style: none;
+		margin: 0;
+		@include flex-flow(row nowrap);
+		align-items: flex-end;
+		.tab {
+			margin: 0 2px 0 0;
+			a {
+				display: block;
+				padding: 5px 10px;
+				color: $color-01;
+				background: $color-10; 
+				border-radius: 3px 3px 0 0;
+				@include transition(background 0.3s ease-in-out);
+			}
+			a:hover, &.activetab a {
+				background: $color-04;
+			}
+			&.activetab a {
+				padding: 7px 12px;
+				font-weight: bold;
+			}
+		}
+	}
 }
