--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -444,29 +444,27 @@
 /* Tabs
 ========================================================================== */
 
-.tabs {
-	& > ul {
-		list-style: none;
-		margin: 0;
-		@include flex-flow(row nowrap);
-		align-items: flex-end;
-		.tab {
-			margin: 0 2px 0 0;
-			a {
-				display: block;
-				padding: 5px 10px;
-				color: $color-01;
-				background: $color-10; 
-				border-radius: 3px 3px 0 0;
-				@include transition(background 0.3s ease-in-out);
-			}
-			a:hover, &.activetab a {
-				background: $color-04;
-			}
-			&.activetab a {
-				padding: 7px 12px;
-				font-weight: bold;
-			}
+.tabs & > ul {
+	list-style: none;
+	margin: 0;
+	@include flex-flow(row nowrap);
+	align-items: flex-end;
+	.tab {
+		margin: 0 2px 0 0;
+		a {
+			display: block;
+			padding: 5px 10px;
+			color: $color-01;
+			background: $color-10; 
+			border-radius: 3px 3px 0 0;
+			@include transition(background 0.3s ease-in-out);
+		}
+		a:hover, &.activetab a {
+			background: $color-04;
+		}
+		&.activetab a {
+			padding: 7px 12px;
+			font-weight: bold;
 		}
 	}
 }
