--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -468,3 +468,45 @@
 		}
 	}
 }
+
+/* Tables
+========================================================================== */
+
+table {	
+	&.table-fioxed-width-table {
+		table-layout: fixed;
+	}
+	&.table1:not(.memberlist) {
+		width: 100%;
+		margin: 0 0 20px 0;
+		th {
+			text-align: left;
+			font-family: $font-02;
+			font-variant: small-caps;
+			font-size: rem(20px);
+			font-weight: normal;
+			background: $color-04;
+			border-right: 1px solid $color-04;
+			border-left: 1px solid $color-04;
+		}
+		th, td {
+			padding: 10px;
+		}
+		td {
+			border: 1px dashed $color-04;
+			vertical-align: top;
+			.inputbox, select {
+				margin: 0;
+			}
+			&:first-child {
+				border-left-color: transparent;
+			}
+			&:last-child {
+				border-right-color: transparent;
+			}
+		}
+		tr:first-child td {
+			border-top-color: transparent;
+		}
+	}
+}
