--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_prosilver.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_prosilver.scss
@@ -7,57 +7,57 @@ ul.navlinks {
 
 /* Table styles
 ----------------------------------------*/
-table.table1 {
-	width: 100%;
-}
+// table.table1 {
+// 	width: 100%;
+// }
 
 .ucp-main table.table1 {
 	padding: 2px;
 }
 
-table.table1 thead th {
-	font-weight: normal;
-	text-transform: uppercase;
-	line-height: 1.3em;
-	padding: 0 0 4px 3px;
-}
+// table.table1 thead th {
+// 	font-weight: normal;
+// 	text-transform: uppercase;
+// 	line-height: 1.3em;
+// 	padding: 0 0 4px 3px;
+// }
 
-table.table1 thead th span {
-	padding-left: 7px;
-}
+// table.table1 thead th span {
+// 	padding-left: 7px;
+// }
 
-table.table1 tbody tr {
-	border: 1px solid transparent;
-}
+// table.table1 tbody tr {
+// 	border: 1px solid transparent;
+// }
 
-table.table1 tbody td {
-	padding: 5px;
-	border-top: 1px solid transparent;
-}
+// table.table1 tbody td {
+// 	padding: 5px;
+// 	border-top: 1px solid transparent;
+// }
 
-table.table1 tbody th {
-	padding: 5px;
-	border-bottom: 1px solid transparent;
-	text-align: left;
-}
+// table.table1 tbody th {
+// 	padding: 5px;
+// 	border-bottom: 1px solid transparent;
+// 	text-align: left;
+// }
 
-/* Specific column styles */
-table.table1 .name		{ text-align: left; }
-table.table1 .center		{ text-align: center; }
-table.table1 .reportby	{ width: 15%; }
-table.table1 .posts		{ text-align: center; width: 7%; }
-table.table1 .joined	{ text-align: left; width: 15%; }
-table.table1 .active	{ text-align: left; width: 15%; }
-table.table1 .mark		{ text-align: center; width: 7%; }
-table.table1 .info		{ text-align: left; width: 30%; }
-table.table1 .info div	{ width: 100%; white-space: normal; overflow: hidden; }
-table.table1 .autocol	{ line-height: 2em; white-space: nowrap; }
-table.table1 thead .autocol { padding-left: 1em; }
+// /* Specific column styles */
+// table.table1 .name		{ text-align: left; }
+// table.table1 .center		{ text-align: center; }
+// table.table1 .reportby	{ width: 15%; }
+// table.table1 .posts		{ text-align: center; width: 7%; }
+// table.table1 .joined	{ text-align: left; width: 15%; }
+// table.table1 .active	{ text-align: left; width: 15%; }
+// table.table1 .mark		{ text-align: center; width: 7%; }
+// table.table1 .info		{ text-align: left; width: 30%; }
+// table.table1 .info div	{ width: 100%; white-space: normal; overflow: hidden; }
+// table.table1 .autocol	{ line-height: 2em; white-space: nowrap; }
+// table.table1 thead .autocol { padding-left: 1em; }
 
-table.table1 span.rank-img {
-	float: right;
-	width: auto;
-}
+// table.table1 span.rank-img {
+// 	float: right;
+// 	width: auto;
+// }
 
 table.info td {
 	padding: 3px;
@@ -460,9 +460,9 @@ div.dl_links {
 	white-space: nowrap;
 }
 
-table.fixed-width-table {
-	table-layout: fixed;
-}
+// table.fixed-width-table {
+// 	table-layout: fixed;
+// }
 
 /* Deprecated as of version 3.2
 -------------------------------------------------*/
@@ -529,21 +529,21 @@ ul.cplist {
 	margin-bottom: 2px;
 }
 
-.panel-container table.table1 {
-	margin-bottom: 1em;
-}
+// .panel-container table.table1 {
+// 	margin-bottom: 1em;
+// }
 
-.panel-container table.table1 thead th {
-	font-weight: bold;
-	border-bottom: 1px solid transparent;
-	padding: 5px;
-}
+// .panel-container table.table1 thead th {
+// 	font-weight: bold;
+// 	border-bottom: 1px solid transparent;
+// 	padding: 5px;
+// }
 
-.panel-container table.table1 tbody th {
-	font-style: italic;
-	background-color: transparent !important;
-	border-bottom: none;
-}
+// .panel-container table.table1 tbody th {
+// 	font-style: italic;
+// 	background-color: transparent !important;
+// 	border-bottom: none;
+// }
 
 .cp-main .pm-message {
 	border: 1px solid transparent;
@@ -994,55 +994,55 @@ input.disabled {
 
 	/* Responsive tables
 	----------------------------------------*/
-	table.responsive, table.responsive tbody, table.responsive tr, table.responsive td {
-		display: block;
-	}
+	// table.responsive, table.responsive tbody, table.responsive tr, table.responsive td {
+	// 	display: block;
+	// }
 
-	table.responsive thead, table.responsive th {
-		display: none;
-	}
+	// table.responsive thead, table.responsive th {
+	// 	display: none;
+	// }
 
-	table.responsive.show-header thead, table.responsive.show-header th:first-child {
-		display: block;
-		width: auto !important;
-		text-align: left !important;
-	}
+	// table.responsive.show-header thead, table.responsive.show-header th:first-child {
+	// 	display: block;
+	// 	width: auto !important;
+	// 	text-align: left !important;
+	// }
 
-	table.responsive.show-header th:first-child span.rank-img {
-		display: none;
-	}
+	// table.responsive.show-header th:first-child span.rank-img {
+	// 	display: none;
+	// }
 
-	table.responsive tr {
-		margin: 2px 0;
-	}
+	// table.responsive tr {
+	// 	margin: 2px 0;
+	// }
 
-	table.responsive td {
-		width: auto !important;
-		text-align: left !important;
-		padding: 4px;
-	}
+	// table.responsive td {
+	// 	width: auto !important;
+	// 	text-align: left !important;
+	// 	padding: 4px;
+	// }
 
-	table.responsive td.empty {
-		display: none !important;
-	}
+	// table.responsive td.empty {
+	// 	display: none !important;
+	// }
 
-	table.responsive td > dfn {
-		display: inline-block !important;
-	}
+	// table.responsive td > dfn {
+	// 	display: inline-block !important;
+	// }
 
-	table.responsive td > dfn:after {
-		content: ':';
-		padding-right: 5px;
-	}
+	// table.responsive td > dfn:after {
+	// 	content: ':';
+	// 	padding-right: 5px;
+	// }
 
-	table.responsive span.rank-img {
-		float: none;
-		padding-right: 5px;
-	}
+	// table.responsive span.rank-img {
+	// 	float: none;
+	// 	padding-right: 5px;
+	// }
 
-	table.responsive.memberlist td:first-child input[type="checkbox"] {
-		float: right;
-	}
+	// table.responsive.memberlist td:first-child input[type="checkbox"] {
+	// 	float: right;
+	// }
 
 	/* Forms
 	----------------------------------------*/
