--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -486,8 +486,7 @@ table {
 			font-size: rem(20px);
 			font-weight: normal;
 			background: $color-04;
-			border-right: 1px solid $color-04;
-			border-left: 1px solid $color-04;
+			border: 1px solid $color-04;
 		}
 		th, td {
 			padding: 10px;
