--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewforum.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewforum.scss
@@ -50,7 +50,7 @@
 		&.row {
 			margin: 0 0 20px 0;
 			padding: 0 0 20px 0;
-			border-bottom: 1px solid $color-04;		
+			border-bottom: 1px dashed $color-04;		
 			.row-item {
 				background-repeat: no-repeat;
 				background-position: 10px 0;
