--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -276,7 +276,7 @@
 			position: relative;
 			padding: 0 0 10px 0;
 			margin: 0 0 10px 0;
-			border-bottom: 1px solid $color-03;			
+			border-bottom: 1px dashed $color-03;			
 			.notification-block {
 				@include flex-flow(row nowrap);				
 				img {
